--- a/Topics/Calling a method/Theory/task.html
+++ b/Topics/Calling a method/Theory/task.html
@@ -26,7 +26,7 @@ convertDoubleToInt(1.25); // this method converts double value to int
 
 findUserByName("Kate"); // this method finds a user whose name is Kate</code></pre>
   <p>Let's take a look at the <code class="language-java">findUserByName</code> example.</p>
-  <p>Here we pass a String value with a name to make the <code class="language-java">findUserByName</code> method does its job.</p>
+  <p>Here we pass a String value with a name to make the <code class="language-java">findUserByName</code> method do its job.</p>
   <p>To call a method from outside the class it belongs to, you need to indicate a class as a prefix. Check these methods:</p>
   <pre><code class="language-java">Math.round(79.378); // method with Math class name
 Character.isLetter('a'); // method with Character class name</code></pre>
