--- a/Topics/Integer types and operations/Theory/task.html
+++ b/Topics/Integer types and operations/Theory/task.html
@@ -61,7 +61,7 @@ public class Main {
     }
 }</code></pre>
   <p>This simple code uses <code class="language-java">Scanner</code> to read data.</p>
-  <p>If we know that the input numbers can be quite large, we can read <code class="language-java">long</code>'s instead of <code class="language-java">int</code>'s:</p>
+  <p>If we know that the input numbers can be quite large, we can read <code class="language-java">long</code>s instead of <code class="language-java">int</code>s:</p>
   <pre><code class="language-java">long a = scanner.nextLong();
 long b = scanner.nextLong();
 
